Actions
Bug #10785
closedecc: NULL pointer errors
Start date:
2019-04-14
Due date:
% Done:
100%
Estimated time:
Difficulty:
Medium
Tags:
Gerrit CR:
Description
NULL pointer errors:
In file included from ../../common/sys/param.h:48:0, from ../../common/sys/t_lock.h:38, from ../../common/sys/systm.h:39, from ../../common/crypto/io/ecc.c:30: ../../common/sys/null.h:32:14: error: initialization makes integer from pointer without a cast [-Werror=int-conversion] #define NULL ((void *)0) ^ ../../common/crypto/io/ecc.c:225:55: note: in expansion of macro 'NULL' static crypto_kcf_provider_handle_t ecc_prov_handle = NULL; ^~~~ ../../common/crypto/io/ecc.c: In function '_fini': ../../common/crypto/io/ecc.c:259:22: error: comparison between pointer and integer [-Werror] if (ecc_prov_handle != NULL) { ^~ ../../common/crypto/io/ecc.c:263:19: error: assignment makes integer from pointer without a cast [-Werror=int-conversion] ecc_prov_handle = NULL; ^ cc1: all warnings being treated as errors
Updated by Electric Monk about 3 years ago
- Status changed from In Progress to Closed
- % Done changed from 90 to 100
git commit 3ec36537a18a5cb5e8a31eca1ea311e033993317
commit 3ec36537a18a5cb5e8a31eca1ea311e033993317 Author: Toomas Soome <tsoome@me.com> Date: 2019-04-19T20:04:04.000Z 10785 ecc: NULL pointer errors Reviewed by: Andy Stormont <astormont@racktopsystems.com> Reviewed by: Sebastian Wiedenroth <sebastian.wiedenroth@skylime.net> Approved by: Dan McDonald <danmcd@joyent.com>
Actions